--- a/source/_posts/使用记录.md
+++ b/source/_posts/使用记录.md
@@ -1,10 +1,12 @@
 ---
 title: 使用记录
 date: 1970-01-01 00:00:00
+id: doc1
 tags:
     - 标签
 categories: 
     - 分类
+description: 记录主题的特殊语法
 cover: https://s1.ax1x.com/2020/04/06/GrHrAe.jpg
 top_img: https://s1.ax1x.com/2020/04/06/Gr5SNn.jpg
 ---
